Added okno logowania

--- a/Czat/App.xaml
+++ b/Czat/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="TestWPF.App"
+﻿<Application x:Class="Czat.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TestWPF"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Czat"
+             StartupUri="Login.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
