--- a/Czat/MainWindow.xaml
+++ b/Czat/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="TestWPF.MainWindow"
+﻿<Window x:Class="Czat.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TestWPF" xmlns:viewmodel="clr-namespace:TestWPF.MVVM.ViewModel"
+        xmlns:local="clr-namespace:Czat" xmlns:viewmodel="clr-namespace:Czat.MVVM.ViewModel"
         mc:Ignorable="d"
         Height="450" Width="800"
         Background="#36393F"
