--- a/Czat/MVVM/View/Login.xaml
+++ b/Czat/MVVM/View/Login.xaml
@@ -172,7 +172,7 @@
         <Grid Grid.Row="1"
               Grid.Column="1">
             <Image
-               Source="./Icons/logo.png"
+               Source="/Icons/logo.png"
                 RenderOptions.BitmapScalingMode="Fant">
             </Image>
         </Grid>
