--- a/App-Client-1/App.xaml
+++ b/App-Client-1/App.xaml
@@ -2,6 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ClientApp"
+             
+             xmlns:viewModel="clr-namespace:ClientApp.MVVM.ViewModel"
+             xmlns:view="clr-namespace:ClientApp.MVVM.View"
+             
              StartupUri="MVVM/View/LoginWindow.xaml">
     
     <Application.Resources>
@@ -11,6 +15,15 @@
                 <ResourceDictionary Source="./Themes/MessageBox.xaml"/>
                 <ResourceDictionary Source="./Themes/Scrollbar.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type viewModel:ChatViewModel}">
+                <view:ChatView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+                <view:HomeView/>
+            </DataTemplate>
+            
         </ResourceDictionary>
     </Application.Resources>
     
