--- a/apps/ClientApp/App.xaml
+++ b/apps/ClientApp/App.xaml
@@ -23,7 +23,10 @@
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
                 <view:HomeView/>
             </DataTemplate>
-            
+
+            <DataTemplate DataType="{x:Type viewModel:ServerViewModel}">
+                <view:ServerView/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
     
